# animegen

./: README.md  config.yaml  pyproject.toml
src/animegen/: analyze.py  assemble.py  cli.py  config.py  download.py  generate.py  logger.py  pipeline.py  segment.py
src/animegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
